styles/User.module.css
.frame {
  display: flex;
  flex-direction: column;
  background-color: rgb(32, 48, 77);
  color: #FFF;
  min-height:100vh;
  font-family: Arial, sans-serif;
  justify-content: space-between;
}

.card label {
  font-size: 55%;
  margin-left: 1rem;
  color: #ffffffdb
}

.frame h1 {
text-align: center;
font-size: 2rem;
margin: 1rem 0;

}
.frame  h2 {
  padding: 0rem 3rem 1rem;
  font-size: 0.75rem;
  text-align: center;
  font-weight: 400;
}
.frame  h3 {
  padding: 0 3rem;
  font-size: 1rem;
  text-align: center;
  font-weight: 400;
  
}



.header {
  display: flex;
  flex-direction: column;
  /* height: 11rem; */
}

.selectedAddress {
  align-self: center;
  font-size: 85%;
  margin: 0.5rem;
  color: #94a6c3;
}

.logo {
  /* position: absolute; */
  margin: 1rem;
  width: 5rem;
  top: 4rem;
  text-align: center;
  display: flex;
  align-self: center;

}

.card {
  min-height: 10rem;
  position: relative;
  height: 10rem;
  width: 90%;
  border-radius: 8px;
  align-self: center;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  background: rgb(216,33,34);
  background: linear-gradient(20deg, rgba(216,33,34,1) 17%, rgba(255,217,35,1) 100%);
  -webkit-box-shadow: 1px 1px 7px 0px rgb(148 166 195 / 45%);
  box-shadow: 1px 1px 7px 0px rgb(148 166 195 / 45%);
}

.card_name {
  /* justify-self: flex-end; */
  padding: 0rem 1rem 0.5rem 1rem;
  letter-spacing: 0.05rem;
  font-family: Tahoma, sans-serif;
}
.card_iban {
  padding: 0rem 1rem 1rem 1rem;
  letter-spacing: 0.05rem;
  font-family: Tahoma, sans-serif;
  -webkit-user-select: all;  /* Chrome all / Safari all */
  -moz-user-select: all;     /* Firefox all */
  -ms-user-select: all;      /* IE 10+ */
  user-select: all;          /* Likely future */   
}

.footer {
  /* margin: 0 2rem 2rem; */
  text-align: center;
  /* flex: 1 1; */
  flex-direction: column;
  display: flex;
  justify-content: flex-end;
}

.qr {
  display: flex;
  flex: 1 0;
  justify-content: center;
  width: 80%;
  align-self: center;
}

.qr img {
  /* margin: 2rem; */
  /* max-width: 180px; */
  display: flex;
  align-self: center;
  width: 100%;
}


.tophalf { 
  display: flex;
  flex-direction: column;
  align-items: center;
}


.copy {
  position: relative;
}

